fixed about page spacings

--- a/Home.css
+++ b/Home.css
@@ -227,7 +227,7 @@ body {
 .right p {
   font-size: 1rem;
   text-align: center;
-  padding-bottom: 5rem;
+  /* padding-bottom: 5rem; */
 }
 
 .goals-title,
